content/_generated-doc/2.13/config/quarkus-kubernetes-config-group-port-config.adoc

:summaryTableId: quarkus-kubernetes-config-group-port-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-port-config_configuration]]link:#quarkus-kubernetes-config-group-port-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.container-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.container-port[quarkus.knative.ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PORTS__PORTS__CONTAINER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PORTS__PORTS__CONTAINER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.host-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.host-port[quarkus.knative.ports."ports".host-port]`

[.description]
--
The host port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PORTS__PORTS__HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PORTS__PORTS__HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.path]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.path[quarkus.knative.ports."ports".path]`

[.description]
--
The application path (refers to web application path).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PORTS__PORTS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PORTS__PORTS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.protocol]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.protocol[quarkus.knative.ports."ports".protocol]`

[.description]
--
The protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PORTS__PORTS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PORTS__PORTS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.node-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.ports.-ports-.node-port[quarkus.knative.ports."ports".node-port]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PORTS__PORTS__NODE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PORTS__PORTS__NODE_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.container-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.container-port[quarkus.knative.init-containers."init-containers".ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__CONTAINER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__CONTAINER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.host-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.host-port[quarkus.knative.init-containers."init-containers".ports."ports".host-port]`

[.description]
--
The host port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.path]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.path[quarkus.knative.init-containers."init-containers".ports."ports".path]`

[.description]
--
The application path (refers to web application path).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.protocol]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.protocol[quarkus.knative.init-containers."init-containers".ports."ports".protocol]`

[.description]
--
The protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.node-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.init-containers.-init-containers-.ports.-ports-.node-port[quarkus.knative.init-containers."init-containers".ports."ports".node-port]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__NODE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__NODE_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.container-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.container-port[quarkus.knative.containers."containers".ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__CONTAINER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__CONTAINER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.host-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.host-port[quarkus.knative.containers."containers".ports."ports".host-port]`

[.description]
--
The host port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.path]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.path[quarkus.knative.containers."containers".ports."ports".path]`

[.description]
--
The application path (refers to web application path).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.protocol]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.protocol[quarkus.knative.containers."containers".ports."ports".protocol]`

[.description]
--
The protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.node-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.knative.containers.-containers-.ports.-ports-.node-port[quarkus.knative.containers."containers".ports."ports".node-port]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__NODE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__PORTS__PORTS__NODE_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.container-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.container-port[quarkus.kubernetes.ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PORTS__PORTS__CONTAINER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PORTS__PORTS__CONTAINER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.host-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.host-port[quarkus.kubernetes.ports."ports".host-port]`

[.description]
--
The host port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PORTS__PORTS__HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PORTS__PORTS__HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.path]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.path[quarkus.kubernetes.ports."ports".path]`

[.description]
--
The application path (refers to web application path).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PORTS__PORTS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PORTS__PORTS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.protocol]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.protocol[quarkus.kubernetes.ports."ports".protocol]`

[.description]
--
The protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PORTS__PORTS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PORTS__PORTS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.node-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.ports.-ports-.node-port[quarkus.kubernetes.ports."ports".node-port]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PORTS__PORTS__NODE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PORTS__PORTS__NODE_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.container-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.container-port[quarkus.kubernetes.init-containers."init-containers".ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__CONTAINER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__CONTAINER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.host-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.host-port[quarkus.kubernetes.init-containers."init-containers".ports."ports".host-port]`

[.description]
--
The host port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.path]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.path[quarkus.kubernetes.init-containers."init-containers".ports."ports".path]`

[.description]
--
The application path (refers to web application path).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.protocol]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.protocol[quarkus.kubernetes.init-containers."init-containers".ports."ports".protocol]`

[.description]
--
The protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.node-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.init-containers.-init-containers-.ports.-ports-.node-port[quarkus.kubernetes.init-containers."init-containers".ports."ports".node-port]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__NODE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__NODE_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.container-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.container-port[quarkus.kubernetes.sidecars."sidecars".ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__CONTAINER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__CONTAINER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.host-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.host-port[quarkus.kubernetes.sidecars."sidecars".ports."ports".host-port]`

[.description]
--
The host port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.path]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.path[quarkus.kubernetes.sidecars."sidecars".ports."ports".path]`

[.description]
--
The application path (refers to web application path).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.protocol]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.protocol[quarkus.kubernetes.sidecars."sidecars".ports."ports".protocol]`

[.description]
--
The protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.node-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.kubernetes.sidecars.-sidecars-.ports.-ports-.node-port[quarkus.kubernetes.sidecars."sidecars".ports."ports".node-port]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__NODE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__PORTS__PORTS__NODE_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.container-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.container-port[quarkus.openshift.ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PORTS__PORTS__CONTAINER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PORTS__PORTS__CONTAINER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.host-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.host-port[quarkus.openshift.ports."ports".host-port]`

[.description]
--
The host port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PORTS__PORTS__HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PORTS__PORTS__HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.path]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.path[quarkus.openshift.ports."ports".path]`

[.description]
--
The application path (refers to web application path).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PORTS__PORTS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PORTS__PORTS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.protocol]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.protocol[quarkus.openshift.ports."ports".protocol]`

[.description]
--
The protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PORTS__PORTS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PORTS__PORTS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.node-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.ports.-ports-.node-port[quarkus.openshift.ports."ports".node-port]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PORTS__PORTS__NODE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PORTS__PORTS__NODE_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.container-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.container-port[quarkus.openshift.init-containers."init-containers".ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__CONTAINER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__CONTAINER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.host-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.host-port[quarkus.openshift.init-containers."init-containers".ports."ports".host-port]`

[.description]
--
The host port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.path]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.path[quarkus.openshift.init-containers."init-containers".ports."ports".path]`

[.description]
--
The application path (refers to web application path).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.protocol]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.protocol[quarkus.openshift.init-containers."init-containers".ports."ports".protocol]`

[.description]
--
The protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.node-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.init-containers.-init-containers-.ports.-ports-.node-port[quarkus.openshift.init-containers."init-containers".ports."ports".node-port]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__NODE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__PORTS__PORTS__NODE_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.container-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.container-port[quarkus.openshift.sidecars."sidecars".ports."ports".container-port]`

[.description]
--
The port number. Refers to the container port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__CONTAINER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__CONTAINER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.host-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.host-port[quarkus.openshift.sidecars."sidecars".ports."ports".host-port]`

[.description]
--
The host port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.path]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.path[quarkus.openshift.sidecars."sidecars".ports."ports".path]`

[.description]
--
The application path (refers to web application path).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.protocol]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.protocol[quarkus.openshift.sidecars."sidecars".ports."ports".protocol]`

[.description]
--
The protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__PROTOCOL+++`
endif::add-copy-button-to-env-var[]
-- a|
`tcp`, `udp` 
|`tcp`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.node-port]]`link:#quarkus-kubernetes-config-group-port-config_quarkus.openshift.sidecars.-sidecars-.ports.-ports-.node-port[quarkus.openshift.sidecars."sidecars".ports."ports".node-port]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__NODE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__PORTS__PORTS__NODE_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|

|===